@@ -51,7 +51,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
-          <argLine>-Xms100m -Xmx100m</argLine>
+          <argLine>-Xmx256m -XX:PermSize=256M -XX:MaxPermSize=256M</argLine>
           <useManifestOnlyJar>false</useManifestOnlyJar>
         </configuration>
       </plugin>
@@ -146,25 +146,6 @@
     </dependency>
   </dependencies>
   <profiles>
-    <profile>
-      <id>JBTM-1298</id>
-	<activation>
-		<activeByDefault>true</activeByDefault>
-	</activation>
-        <build>
-      <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>**/SimpleIsolatedServers**</exclude>
-          </excludes>
-        </configuration>
-      </plugin>
-      </plugins>
-        </build>
-    </profile>
     <profile>
         <id>release</id>
         <build>
